feat: batch service and model

--- a/tests/cassettes/test_address_create.yaml
+++ b/tests/cassettes/test_address_create.yaml
@@ -22,8 +22,8 @@ interactions:
     uri: https://api.easypost.com/v2/addresses
   response:
     body:
-      string: '{"id": "adr_3f56acdc1ccb11edb008ac1f6bc72124", "object": "Address",
-        "created_at": "2022-08-15T18:51:18+00:00", "updated_at": "2022-08-15T18:51:18+00:00",
+      string: '{"id": "adr_779da35ef0fb11ed9ce1ac1f6bc7bdc6", "object": "Address",
+        "created_at": "2023-05-12T19:30:35+00:00", "updated_at": "2023-05-12T19:30:35+00:00",
         "name": "Jack Sparrow", "company": null, "street1": "388 Townsend St", "street2":
         "Apt 20", "city": "San Francisco", "state": "CA", "zip": "94107", "country":
         "US", "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
@@ -37,11 +37,11 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"bd36dbdea6de9e455409e6c6913c57a4"
+      - W/"35c6c397111b5387c8a3420bb0be9d41"
       expires:
       - '0'
       location:
-      - /api/v2/addresses/adr_3f56acdc1ccb11edb008ac1f6bc72124
+      - /api/v2/addresses/adr_779da35ef0fb11ed9ce1ac1f6bc7bdc6
       pragma:
       - no-cache
       referrer-policy:
@@ -57,20 +57,21 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - f43af47b62fa95a6e79a764800261920
+      - fcd79951645e93dbe2cc315a00060bef
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb9nuq
+      - bigweb4nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq 6aa9972c1e
-      - extlb1nuq 9ce216bfac
+      - intlb2nuq a29e4ad05c
+      - intlb1wdc a29e4ad05c
+      - extlb3wdc 5ab12a3ed2
       x-runtime:
-      - '0.037753'
+      - '0.038412'
       x-version-label:
-      - easypost-202208151827-9b2100b5ad-master
+      - easypost-202305121849-b449e9bf47-master
       x-xss-protection:
       - 1; mode=block
     status:
