--- a/tests/cassettes/test_address_create_and_verify.yaml
+++ b/tests/cassettes/test_address_create_and_verify.yaml
@@ -22,8 +22,8 @@ interactions:
     uri: https://api.easypost.com/v2/addresses/create_and_verify
   response:
     body:
-      string: '{"address": {"id": "adr_a5a2dae939f511eda2e6ac1f6b0a0d1e", "object":
-        "Address", "created_at": "2022-09-21T21:37:52+00:00", "updated_at": "2022-09-21T21:37:52+00:00",
+      string: '{"address": {"id": "adr_7894a4b4f0fb11eda772ac1f6bc7b362", "object":
+        "Address", "created_at": "2023-05-12T19:30:36+00:00", "updated_at": "2023-05-12T19:30:36+00:00",
         "name": "JACK SPARROW", "company": null, "street1": "388 TOWNSEND ST APT 20",
         "street2": "", "city": "SAN FRANCISCO", "state": "CA", "zip": "94107-1670",
         "country": "US", "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test",
@@ -39,11 +39,11 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"1c2cb7b110858af28c65c58c0a0f3fa7"
+      - W/"c0bdac5d259b74bea9ffeb93e754a9c0"
       expires:
       - '0'
       location:
-      - /api/v2/addresses/adr_a5a2dae939f511eda2e6ac1f6b0a0d1e
+      - /api/v2/addresses/adr_7894a4b4f0fb11eda772ac1f6bc7b362
       pragma:
       - no-cache
       referrer-policy:
@@ -59,7 +59,7 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - d25912fc632b8430e2aac19600066f49
+      - fe8d870d645e93dce2cc315e0005fc65
       x-frame-options:
       - SAMEORIGIN
       x-node:
@@ -67,12 +67,13 @@ interactions:
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb2nuq 29913d444b
-      - extlb2nuq 29913d444b
+      - intlb1nuq a29e4ad05c
+      - intlb2wdc a29e4ad05c
+      - extlb4wdc 5ab12a3ed2
       x-runtime:
-      - '0.042538'
+      - '0.051215'
       x-version-label:
-      - easypost-202209212025-b1bc460ca8-master
+      - easypost-202305121849-b449e9bf47-master
       x-xss-protection:
       - 1; mode=block
     status:
