--- a/tests/cassettes/test_address_create_verify_strict.yaml
+++ b/tests/cassettes/test_address_create_verify_strict.yaml
@@ -23,8 +23,8 @@ interactions:
     uri: https://api.easypost.com/v2/addresses
   response:
     body:
-      string: '{"id": "adr_3fb06f3a1ccb11edb768ac1f6b0a0d1e", "object": "Address",
-        "created_at": "2022-08-15T18:51:19+00:00", "updated_at": "2022-08-15T18:51:19+00:00",
+      string: '{"id": "adr_7816dba5f0fb11eda574ac1f6bc7b362", "object": "Address",
+        "created_at": "2023-05-12T19:30:36+00:00", "updated_at": "2023-05-12T19:30:36+00:00",
         "name": "JACK SPARROW", "company": null, "street1": "388 TOWNSEND ST APT 20",
         "street2": "", "city": "SAN FRANCISCO", "state": "CA", "zip": "94107-1670",
         "country": "US", "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test",
@@ -40,11 +40,11 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"9d4839a8fe862cfffbafd27a54644ab6"
+      - W/"40e2ef0b233432aefa439b0ba385fa29"
       expires:
       - '0'
       location:
-      - /api/v2/addresses/adr_3fb06f3a1ccb11edb768ac1f6b0a0d1e
+      - /api/v2/addresses/adr_7816dba5f0fb11eda574ac1f6bc7b362
       pragma:
       - no-cache
       referrer-policy:
@@ -60,20 +60,21 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - f43af47d62fa95a7e79a76650026194a
+      - fcd79957645e93dbe2cc315c00060c40
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb2nuq
+      - bigweb8nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq 6aa9972c1e
-      - extlb1nuq 9ce216bfac
+      - intlb1nuq a29e4ad05c
+      - intlb1wdc a29e4ad05c
+      - extlb3wdc 5ab12a3ed2
       x-runtime:
-      - '0.044484'
+      - '0.077775'
       x-version-label:
-      - easypost-202208151827-9b2100b5ad-master
+      - easypost-202305121849-b449e9bf47-master
       x-xss-protection:
       - 1; mode=block
     status:
