--- a/tests/cassettes/test_address_get_next_page.yaml
+++ b/tests/cassettes/test_address_get_next_page.yaml
@@ -16,58 +16,63 @@ interactions:
     uri: https://api.easypost.com/v2/addresses?page_size=5
   response:
     body:
-      string: '{"addresses": [{"id": "adr_46fb9648c8d811edad32ac1f6b0a0d1e", "object":
-        "Address", "created_at": "2023-03-22T17:37:54+00:00", "updated_at": "2023-03-22T17:37:54+00:00",
-        "name": null, "company": "EASYPOST", "street1": "417 MONTGOMERY ST FL 2",
-        "street2": null, "city": "SAN FRANCISCO", "state": "CA", "zip": "94104-1129",
-        "country": "US", "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test",
-        "carrier_facility": null, "residential": false, "federal_tax_id": null, "state_tax_id":
-        null, "verifications": {"zip4": {"success": true, "errors": [{"code": "E.SECONDARY_INFORMATION.INVALID",
-        "field": "street2", "message": "Invalid secondary information(Apt/Suite#)",
-        "suggestion": null}], "details": null}, "delivery": {"success": true, "errors":
-        [{"code": "E.SECONDARY_INFORMATION.INVALID", "field": "street2", "message":
-        "Invalid secondary information(Apt/Suite#)", "suggestion": null}], "details":
-        {"latitude": 37.79342, "longitude": -122.40288, "time_zone": "America/Los_Angeles"}}}},
-        {"id": "adr_46f5a534c8d811edabcaac1f6bc7b362", "object": "Address", "created_at":
-        "2023-03-22T17:37:54+00:00", "updated_at": "2023-03-22T17:37:54+00:00", "name":
-        null, "company": "EASYPOST", "street1": "417 MONTGOMERY ST FL 5", "street2":
-        null, "city": "SAN FRANCISCO", "state": "CA", "zip": "94104-1129", "country":
+      string: '{"addresses": [{"id": "adr_78e6a91af0fb11ed8048ac1f6bc72124", "object":
+        "Address", "created_at": "2023-05-12T19:30:37+00:00", "updated_at": "2023-05-12T19:30:37+00:00",
+        "name": "Jack Sparrow", "company": null, "street1": "388 Townsend St", "street2":
+        "Apt 20", "city": "San Francisco", "state": "CA", "zip": "94107", "country":
         "US", "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
-        null, "residential": false, "federal_tax_id": null, "state_tax_id": null,
-        "verifications": {"zip4": {"success": true, "errors": [{"code": "E.SECONDARY_INFORMATION.INVALID",
+        null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
+        {}}, {"id": "adr_7894a4b4f0fb11eda772ac1f6bc7b362", "object": "Address", "created_at":
+        "2023-05-12T19:30:36+00:00", "updated_at": "2023-05-12T19:30:36+00:00", "name":
+        "JACK SPARROW", "company": null, "street1": "388 TOWNSEND ST APT 20", "street2":
+        null, "city": "SAN FRANCISCO", "state": "CA", "zip": "94107-1670", "country":
+        "US", "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
+        null, "residential": true, "federal_tax_id": null, "state_tax_id": null, "verifications":
+        {"zip4": {"success": true, "errors": [], "details": null}, "delivery": {"success":
+        true, "errors": [], "details": {"latitude": 37.77551, "longitude": -122.39697,
+        "time_zone": "America/Los_Angeles"}}}}, {"id": "adr_7857b92df0fb11eda67cac1f6bc7b362",
+        "object": "Address", "created_at": "2023-05-12T19:30:36+00:00", "updated_at":
+        "2023-05-12T19:30:36+00:00", "name": null, "company": "EASYPOST", "street1":
+        "417 MONTGOMERY ST FL 5", "street2": null, "city": "SAN FRANCISCO", "state":
+        "CA", "zip": "94104-1129", "country": "US", "phone": "<REDACTED>", "email":
+        "<REDACTED>", "mode": "test", "carrier_facility": null, "residential": false,
+        "federal_tax_id": null, "state_tax_id": null, "verifications": {"zip4": {"success":
+        true, "errors": [{"code": "E.SECONDARY_INFORMATION.INVALID", "field": "street2",
+        "message": "Invalid secondary information(Apt/Suite#)", "suggestion": null}],
+        "details": null}, "delivery": {"success": true, "errors": [{"code": "E.SECONDARY_INFORMATION.INVALID",
         "field": "street2", "message": "Invalid secondary information(Apt/Suite#)",
-        "suggestion": null}], "details": null}, "delivery": {"success": true, "errors":
-        [{"code": "E.SECONDARY_INFORMATION.INVALID", "field": "street2", "message":
-        "Invalid secondary information(Apt/Suite#)", "suggestion": null}], "details":
-        {"latitude": 37.79342, "longitude": -122.40288, "time_zone": "America/Los_Angeles"}}}},
-        {"id": "adr_46b9c7dbc8d811eda3ccac1f6bc7bdc6", "object": "Address", "created_at":
-        "2023-03-22T17:37:54+00:00", "updated_at": "2023-03-22T17:37:54+00:00", "name":
-        null, "company": "EasyPost", "street1": "417 MONTGOMERY ST", "street2": "FLOOR
-        2", "city": "SAN FRANCISCO", "state": "CA", "zip": "94104", "country": "US",
-        "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
-        null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
-        {}}, {"id": "adr_467ba677c8d811edacfcac1f6b0a0d1e", "object": "Address", "created_at":
-        "2023-03-22T17:37:53+00:00", "updated_at": "2023-03-22T17:37:53+00:00", "name":
-        null, "company": "EasyPost", "street1": "417 MONTGOMERY ST", "street2": "FLOOR
-        5", "city": "SAN FRANCISCO", "state": "CA", "zip": "94104", "country": "US",
-        "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
-        null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
-        {}}, {"id": "adr_30ea418bc8d811eda413ac1f6b0a0d1e", "object": "Address", "created_at":
-        "2023-03-22T17:37:17+00:00", "updated_at": "2023-03-22T17:37:17+00:00", "name":
-        null, "company": "EasyPost", "street1": "417 MONTGOMERY ST", "street2": "FLOOR
-        2", "city": "SAN FRANCISCO", "state": "CA", "zip": "94104", "country": "US",
-        "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
-        null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
-        {}}], "has_more": true}'
+        "suggestion": null}], "details": {"latitude": 37.79342, "longitude": -122.40288,
+        "time_zone": "America/Los_Angeles"}}}}, {"id": "adr_7816dba5f0fb11eda574ac1f6bc7b362",
+        "object": "Address", "created_at": "2023-05-12T19:30:36+00:00", "updated_at":
+        "2023-05-12T19:30:36+00:00", "name": "JACK SPARROW", "company": null, "street1":
+        "388 TOWNSEND ST APT 20", "street2": null, "city": "SAN FRANCISCO", "state":
+        "CA", "zip": "94107-1670", "country": "US", "phone": "<REDACTED>", "email":
+        "<REDACTED>", "mode": "test", "carrier_facility": null, "residential": true,
+        "federal_tax_id": null, "state_tax_id": null, "verifications": {"zip4": {"success":
+        true, "errors": [], "details": null}, "delivery": {"success": true, "errors":
+        [], "details": {"latitude": 37.77551, "longitude": -122.39697, "time_zone":
+        "America/Los_Angeles"}}}}, {"id": "adr_77d9ed8af0fb11eda485ac1f6bc7b362",
+        "object": "Address", "created_at": "2023-05-12T19:30:35+00:00", "updated_at":
+        "2023-05-12T19:30:35+00:00", "name": null, "company": "EASYPOST", "street1":
+        "417 MONTGOMERY ST FL 5", "street2": null, "city": "SAN FRANCISCO", "state":
+        "CA", "zip": "94104-1129", "country": "US", "phone": "<REDACTED>", "email":
+        "<REDACTED>", "mode": "test", "carrier_facility": null, "residential": false,
+        "federal_tax_id": null, "state_tax_id": null, "verifications": {"zip4": {"success":
+        true, "errors": [{"code": "E.SECONDARY_INFORMATION.INVALID", "field": "street2",
+        "message": "Invalid secondary information(Apt/Suite#)", "suggestion": null}],
+        "details": null}, "delivery": {"success": true, "errors": [{"code": "E.SECONDARY_INFORMATION.INVALID",
+        "field": "street2", "message": "Invalid secondary information(Apt/Suite#)",
+        "suggestion": null}], "details": {"latitude": 37.79342, "longitude": -122.40288,
+        "time_zone": "America/Los_Angeles"}}}}], "has_more": true}'
     headers:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '3164'
+      - '3611'
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"e9f3a52901c0e95356bf553123e61e49"
+      - W/"3c5fdbdd62b40380463e1deb9a6f306b"
       expires:
       - '0'
       pragma:
@@ -85,20 +90,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 730d5da564249726e0dca52c0007e3fc
+      - 52975b51645e93dee2cc316100061fd2
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb4nuq
+      - bigweb9nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
       - intlb2nuq a29e4ad05c
-      - extlb1nuq a29e4ad05c
+      - extlb2nuq 5ab12a3ed2
       x-runtime:
-      - '0.033107'
+      - '0.033317'
       x-version-label:
-      - easypost-202303291907-621b84348b-master
+      - easypost-202305121849-b449e9bf47-master
       x-xss-protection:
       - 1; mode=block
     status:
@@ -118,49 +123,37 @@ interactions:
       user-agent:
       - <REDACTED>
     method: GET
-    uri: https://api.easypost.com/v2/addresses?before_id=adr_30ea418bc8d811eda413ac1f6b0a0d1e&page_size=5
+    uri: https://api.easypost.com/v2/addresses?before_id=adr_77d9ed8af0fb11eda485ac1f6bc7b362&page_size=5
   response:
     body:
-      string: '{"addresses": [{"id": "adr_3085a20ac8d811edab02ac1f6bc72124", "object":
-        "Address", "created_at": "2023-03-22T17:37:17+00:00", "updated_at": "2023-03-22T17:37:17+00:00",
-        "name": null, "company": "EasyPost", "street1": "417 MONTGOMERY ST", "street2":
-        "FLOOR 5", "city": "SAN FRANCISCO", "state": "CA", "zip": "94104", "country":
+      string: '{"addresses": [{"id": "adr_779da35ef0fb11ed9ce1ac1f6bc7bdc6", "object":
+        "Address", "created_at": "2023-05-12T19:30:35+00:00", "updated_at": "2023-05-12T19:30:35+00:00",
+        "name": "Jack Sparrow", "company": null, "street1": "388 Townsend St", "street2":
+        "Apt 20", "city": "San Francisco", "state": "CA", "zip": "94107", "country":
         "US", "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
         null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
-        {}}, {"id": "adr_97292505c8d511ed8e98ac1f6bc72124", "object": "Address", "created_at":
-        "2023-03-22T17:18:40+00:00", "updated_at": "2023-03-22T17:18:40+00:00", "name":
-        null, "company": "EASYPOST", "street1": "417 MONTGOMERY ST FL 2", "street2":
-        null, "city": "SAN FRANCISCO", "state": "CA", "zip": "94104-1129", "country":
+        {}}, {"id": "adr_301dd00ae45711edb6c9ac1f6bc7b362", "object": "Address", "created_at":
+        "2023-04-26T17:24:23+00:00", "updated_at": "2023-04-26T17:24:23+00:00", "name":
+        "Jack Sparrow", "company": null, "street1": "388 Townsend St", "street2":
+        "Apt 20", "city": "San Francisco", "state": "CA", "zip": "94107", "country":
         "US", "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
-        null, "residential": false, "federal_tax_id": null, "state_tax_id": null,
-        "verifications": {"zip4": {"success": true, "errors": [{"code": "E.SECONDARY_INFORMATION.INVALID",
-        "field": "street2", "message": "Invalid secondary information(Apt/Suite#)",
-        "suggestion": null}], "details": null}, "delivery": {"success": true, "errors":
-        [{"code": "E.SECONDARY_INFORMATION.INVALID", "field": "street2", "message":
-        "Invalid secondary information(Apt/Suite#)", "suggestion": null}], "details":
-        {"latitude": 37.79342, "longitude": -122.40288, "time_zone": "America/Los_Angeles"}}}},
-        {"id": "adr_97228d0ac8d511ed85b4ac1f6bc7b362", "object": "Address", "created_at":
-        "2023-03-22T17:18:40+00:00", "updated_at": "2023-03-22T17:18:40+00:00", "name":
-        null, "company": "EASYPOST", "street1": "417 MONTGOMERY ST FL 5", "street2":
-        null, "city": "SAN FRANCISCO", "state": "CA", "zip": "94104-1129", "country":
-        "US", "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
-        null, "residential": false, "federal_tax_id": null, "state_tax_id": null,
-        "verifications": {"zip4": {"success": true, "errors": [{"code": "E.SECONDARY_INFORMATION.INVALID",
-        "field": "street2", "message": "Invalid secondary information(Apt/Suite#)",
-        "suggestion": null}], "details": null}, "delivery": {"success": true, "errors":
-        [{"code": "E.SECONDARY_INFORMATION.INVALID", "field": "street2", "message":
-        "Invalid secondary information(Apt/Suite#)", "suggestion": null}], "details":
-        {"latitude": 37.79342, "longitude": -122.40288, "time_zone": "America/Los_Angeles"}}}},
-        {"id": "adr_96e6959bc8d511ed85a3ac1f6bc7b362", "object": "Address", "created_at":
-        "2023-03-22T17:18:40+00:00", "updated_at": "2023-03-22T17:18:40+00:00", "name":
-        null, "company": "EasyPost", "street1": "417 MONTGOMERY ST", "street2": "FLOOR
-        2", "city": "SAN FRANCISCO", "state": "CA", "zip": "94104", "country": "US",
+        null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
+        {}}, {"id": "adr_301b2d5be45711ed9d33ac1f6bc7bdc6", "object": "Address", "created_at":
+        "2023-04-26T17:24:23+00:00", "updated_at": "2023-04-26T17:24:23+00:00", "name":
+        "Elizabeth Swan", "company": null, "street1": "179 N Harbor Dr", "street2":
+        null, "city": "Redondo Beach", "state": "CA", "zip": "90277", "country": "US",
         "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
         null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
-        {}}, {"id": "adr_96a8bf50c8d511ed8596ac1f6bc7b362", "object": "Address", "created_at":
-        "2023-03-22T17:18:39+00:00", "updated_at": "2023-03-22T17:18:39+00:00", "name":
-        null, "company": "EasyPost", "street1": "417 MONTGOMERY ST", "street2": "FLOOR
-        5", "city": "SAN FRANCISCO", "state": "CA", "zip": "94104", "country": "US",
+        {}}, {"id": "adr_19946d04e45711edbedbac1f6b0a0d1e", "object": "Address", "created_at":
+        "2023-04-26T17:23:46+00:00", "updated_at": "2023-04-26T17:23:46+00:00", "name":
+        "Jack Sparrow", "company": null, "street1": "388 Townsend St", "street2":
+        "Apt 20", "city": "San Francisco", "state": "CA", "zip": "94107", "country":
+        "US", "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
+        null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
+        {}}, {"id": "adr_1991858ae45711eda335ac1f6bc7b362", "object": "Address", "created_at":
+        "2023-04-26T17:23:46+00:00", "updated_at": "2023-04-26T17:23:46+00:00", "name":
+        "Elizabeth Swan", "company": null, "street1": "179 N Harbor Dr", "street2":
+        null, "city": "Redondo Beach", "state": "CA", "zip": "90277", "country": "US",
         "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
         null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
         {}}], "has_more": true}'
@@ -168,11 +161,11 @@ interactions:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '3164'
+      - '2337'
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"0b72488d0728720ba2524bab1459823a"
+      - W/"24187a6346a5cc313c97db39a6a953ae"
       expires:
       - '0'
       pragma:
@@ -190,20 +183,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 730d5da564249726e0dca52c0007e406
+      - 52975b51645e93dee2cc316100061fd7
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb5nuq
+      - bigweb8nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb2nuq a29e4ad05c
-      - extlb1nuq a29e4ad05c
+      - intlb1nuq a29e4ad05c
+      - extlb2nuq 5ab12a3ed2
       x-runtime:
-      - '1.310444'
+      - '4.955250'
       x-version-label:
-      - easypost-202303291907-621b84348b-master
+      - easypost-202305121849-b449e9bf47-master
       x-xss-protection:
       - 1; mode=block
     status:
