--- a/tests/cassettes/test_address_all.yaml
+++ b/tests/cassettes/test_address_all.yaml
@@ -16,51 +16,63 @@ interactions:
     uri: https://api.easypost.com/v2/addresses?page_size=5
   response:
     body:
-      string: '{"addresses": [{"id": "adr_51cb44133dd011ed814eac1f6bc72124", "object":
-        "Address", "created_at": "2022-09-26T19:20:45+00:00", "updated_at": "2022-09-26T19:20:45+00:00",
-        "name": "Elizabeth Swan", "company": null, "street1": "179 N Harbor Dr", "street2":
-        null, "city": "Redondo Beach", "state": "CA", "zip": "90277", "country": "US",
-        "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
+      string: '{"addresses": [{"id": "adr_78e6a91af0fb11ed8048ac1f6bc72124", "object":
+        "Address", "created_at": "2023-05-12T19:30:37+00:00", "updated_at": "2023-05-12T19:30:37+00:00",
+        "name": "Jack Sparrow", "company": null, "street1": "388 Townsend St", "street2":
+        "Apt 20", "city": "San Francisco", "state": "CA", "zip": "94107", "country":
+        "US", "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
         null, "residential": null, "federal_tax_id": null, "state_tax_id": null, "verifications":
-        {}}, {"id": "adr_51c9fdf63dd011edaa80ac1f6bc7bdc6", "object": "Address", "created_at":
-        "2022-09-26T19:20:45+00:00", "updated_at": "2022-09-26T19:20:45+00:00", "name":
+        {}}, {"id": "adr_7894a4b4f0fb11eda772ac1f6bc7b362", "object": "Address", "created_at":
+        "2023-05-12T19:30:36+00:00", "updated_at": "2023-05-12T19:30:36+00:00", "name":
         "JACK SPARROW", "company": null, "street1": "388 TOWNSEND ST APT 20", "street2":
         null, "city": "SAN FRANCISCO", "state": "CA", "zip": "94107-1670", "country":
         "US", "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test", "carrier_facility":
         null, "residential": true, "federal_tax_id": null, "state_tax_id": null, "verifications":
         {"zip4": {"success": true, "errors": [], "details": null}, "delivery": {"success":
         true, "errors": [], "details": {"latitude": 37.77551, "longitude": -122.39697,
-        "time_zone": "America/Los_Angeles"}}}}, {"id": "adr_517e95573dd011edbfc5ac1f6bc72124",
-        "object": "Address", "created_at": "2022-09-26T19:20:44+00:00", "updated_at":
-        "2022-09-26T19:20:44+00:00", "name": "Elizabeth Swan", "company": null, "street1":
-        "179 N Harbor Dr", "street2": null, "city": "Redondo Beach", "state": "CA",
-        "zip": "90277", "country": "US", "phone": "<REDACTED>", "email": "<REDACTED>",
-        "mode": "test", "carrier_facility": null, "residential": null, "federal_tax_id":
-        null, "state_tax_id": null, "verifications": {}}, {"id": "adr_517d63813dd011edb59bac1f6bc7b362",
-        "object": "Address", "created_at": "2022-09-26T19:20:44+00:00", "updated_at":
-        "2022-09-26T19:20:45+00:00", "name": "JACK SPARROW", "company": null, "street1":
+        "time_zone": "America/Los_Angeles"}}}}, {"id": "adr_7857b92df0fb11eda67cac1f6bc7b362",
+        "object": "Address", "created_at": "2023-05-12T19:30:36+00:00", "updated_at":
+        "2023-05-12T19:30:36+00:00", "name": null, "company": "EASYPOST", "street1":
+        "417 MONTGOMERY ST FL 5", "street2": null, "city": "SAN FRANCISCO", "state":
+        "CA", "zip": "94104-1129", "country": "US", "phone": "<REDACTED>", "email":
+        "<REDACTED>", "mode": "test", "carrier_facility": null, "residential": false,
+        "federal_tax_id": null, "state_tax_id": null, "verifications": {"zip4": {"success":
+        true, "errors": [{"code": "E.SECONDARY_INFORMATION.INVALID", "field": "street2",
+        "message": "Invalid secondary information(Apt/Suite#)", "suggestion": null}],
+        "details": null}, "delivery": {"success": true, "errors": [{"code": "E.SECONDARY_INFORMATION.INVALID",
+        "field": "street2", "message": "Invalid secondary information(Apt/Suite#)",
+        "suggestion": null}], "details": {"latitude": 37.79342, "longitude": -122.40288,
+        "time_zone": "America/Los_Angeles"}}}}, {"id": "adr_7816dba5f0fb11eda574ac1f6bc7b362",
+        "object": "Address", "created_at": "2023-05-12T19:30:36+00:00", "updated_at":
+        "2023-05-12T19:30:36+00:00", "name": "JACK SPARROW", "company": null, "street1":
         "388 TOWNSEND ST APT 20", "street2": null, "city": "SAN FRANCISCO", "state":
         "CA", "zip": "94107-1670", "country": "US", "phone": "<REDACTED>", "email":
         "<REDACTED>", "mode": "test", "carrier_facility": null, "residential": true,
         "federal_tax_id": null, "state_tax_id": null, "verifications": {"zip4": {"success":
         true, "errors": [], "details": null}, "delivery": {"success": true, "errors":
         [], "details": {"latitude": 37.77551, "longitude": -122.39697, "time_zone":
-        "America/Los_Angeles"}}}}, {"id": "adr_4b47b2fc3dd011edb78aac1f6b0a0d1e",
-        "object": "Address", "created_at": "2022-09-26T19:20:34+00:00", "updated_at":
-        "2022-09-26T19:20:34+00:00", "name": "Elizabeth Swan", "company": null, "street1":
-        "179 N Harbor Dr", "street2": null, "city": "Redondo Beach", "state": "CA",
-        "zip": "90277", "country": "US", "phone": "<REDACTED>", "email": "<REDACTED>",
-        "mode": "test", "carrier_facility": null, "residential": null, "federal_tax_id":
-        null, "state_tax_id": null, "verifications": {}}], "has_more": true}'
+        "America/Los_Angeles"}}}}, {"id": "adr_77d9ed8af0fb11eda485ac1f6bc7b362",
+        "object": "Address", "created_at": "2023-05-12T19:30:35+00:00", "updated_at":
+        "2023-05-12T19:30:35+00:00", "name": null, "company": "EASYPOST", "street1":
+        "417 MONTGOMERY ST FL 5", "street2": null, "city": "SAN FRANCISCO", "state":
+        "CA", "zip": "94104-1129", "country": "US", "phone": "<REDACTED>", "email":
+        "<REDACTED>", "mode": "test", "carrier_facility": null, "residential": false,
+        "federal_tax_id": null, "state_tax_id": null, "verifications": {"zip4": {"success":
+        true, "errors": [{"code": "E.SECONDARY_INFORMATION.INVALID", "field": "street2",
+        "message": "Invalid secondary information(Apt/Suite#)", "suggestion": null}],
+        "details": null}, "delivery": {"success": true, "errors": [{"code": "E.SECONDARY_INFORMATION.INVALID",
+        "field": "street2", "message": "Invalid secondary information(Apt/Suite#)",
+        "suggestion": null}], "details": {"latitude": 37.79342, "longitude": -122.40288,
+        "time_zone": "America/Los_Angeles"}}}}], "has_more": true}'
     headers:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '2709'
+      - '3611'
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"8834dd874b0a3874a051e65b004621c3"
+      - W/"3c5fdbdd62b40380463e1deb9a6f306b"
       expires:
       - '0'
       pragma:
@@ -78,20 +90,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 3b4deb946331fda9e788e97f003adde4
+      - 52975b50645e93dde2cc316000061fc6
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb9nuq
+      - bigweb1nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq 29913d444b
-      - extlb1nuq 29913d444b
+      - intlb2nuq a29e4ad05c
+      - extlb2nuq 5ab12a3ed2
       x-runtime:
-      - '0.033202'
+      - '0.054539'
       x-version-label:
-      - easypost-202209261717-03ecd81b73-master
+      - easypost-202305121849-b449e9bf47-master
       x-xss-protection:
       - 1; mode=block
     status:
