--- a/tests/cassettes/test_address_create_verify.yaml
+++ b/tests/cassettes/test_address_create_verify.yaml
@@ -22,8 +22,8 @@ interactions:
     uri: https://api.easypost.com/v2/addresses
   response:
     body:
-      string: '{"id": "adr_3f855fd41ccb11edb759ac1f6b0a0d1e", "object": "Address",
-        "created_at": "2022-08-15T18:51:18+00:00", "updated_at": "2022-08-15T18:51:18+00:00",
+      string: '{"id": "adr_77d9ed8af0fb11eda485ac1f6bc7b362", "object": "Address",
+        "created_at": "2023-05-12T19:30:35+00:00", "updated_at": "2023-05-12T19:30:35+00:00",
         "name": null, "company": "EASYPOST", "street1": "417 MONTGOMERY ST FL 5",
         "street2": "", "city": "SAN FRANCISCO", "state": "CA", "zip": "94104-1129",
         "country": "US", "phone": "<REDACTED>", "email": "<REDACTED>", "mode": "test",
@@ -42,11 +42,11 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"311f0346a92ec4505638f73706d1fa42"
+      - W/"230439fff07642253c25c218bb51f982"
       expires:
       - '0'
       location:
-      - /api/v2/addresses/adr_3f855fd41ccb11edb759ac1f6b0a0d1e
+      - /api/v2/addresses/adr_77d9ed8af0fb11eda485ac1f6bc7b362
       pragma:
       - no-cache
       referrer-policy:
@@ -62,20 +62,21 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - f43af47b62fa95a6e79a766400261938
+      - fcd79957645e93dbe2cc315b00060c1c
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb1nuq
+      - bigweb12nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq 6aa9972c1e
-      - extlb1nuq 9ce216bfac
+      - intlb2nuq a29e4ad05c
+      - intlb2wdc a29e4ad05c
+      - extlb3wdc 5ab12a3ed2
       x-runtime:
-      - '0.043454'
+      - '0.048013'
       x-version-label:
-      - easypost-202208151827-9b2100b5ad-master
+      - easypost-202305121849-b449e9bf47-master
       x-xss-protection:
       - 1; mode=block
     status:
