--- a/tests/cassettes/test_batch_create_and_buy.yaml
+++ b/tests/cassettes/test_batch_create_and_buy.yaml
@@ -34,9 +34,9 @@ interactions:
     uri: https://api.easypost.com/v2/batches/create_and_buy
   response:
     body:
-      string: '{"id": "batch_ea9b35241158435e9b9181365473f8c5", "object": "EasyPost::Entity::Batch",
+      string: '{"id": "batch_8122884150284dbe91a723679df2f67f", "object": "Batch",
         "mode": "test", "state": "creating", "num_shipments": 2, "reference": null,
-        "created_at": "2022-09-21T16:04:51Z", "updated_at": "2022-09-21T16:04:51Z",
+        "created_at": "2023-05-12T19:30:44Z", "updated_at": "2023-05-12T19:30:44Z",
         "scan_form": null, "shipments": [], "status": {"created": 0, "queued_for_purchase":
         0, "creation_failed": 0, "postage_purchased": 0, "postage_purchase_failed":
         0}, "pickup": null, "label_url": null}'
@@ -44,11 +44,11 @@ interactions:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '402'
+      - '384'
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"84b1f91f8c02e4a98499c5ac388a7a90"
+      - W/"5c3d65ef5c3db7c880dc9d64a3975068"
       expires:
       - '0'
       pragma:
@@ -66,20 +66,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 8aed2207632b3623e2b8777400150196
+      - 52975b55645e93e4e2cc317f000622cf
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb5nuq
+      - bigweb2nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb2nuq 29913d444b
-      - extlb1nuq 29913d444b
+      - intlb2nuq a29e4ad05c
+      - extlb2nuq 5ab12a3ed2
       x-runtime:
-      - '0.098547'
+      - '0.047490'
       x-version-label:
-      - easypost-202209210008-610ad55e3f-master
+      - easypost-202305121849-b449e9bf47-master
       x-xss-protection:
       - 1; mode=block
     status:
