--- a/tests/cassettes/test_batch_retrieve.yaml
+++ b/tests/cassettes/test_batch_retrieve.yaml
@@ -27,9 +27,9 @@ interactions:
     uri: https://api.easypost.com/v2/batches
   response:
     body:
-      string: '{"id": "batch_dce1deacd2bd4b1b876ccdcf0e3d43fa", "object": "EasyPost::Entity::Batch",
+      string: '{"id": "batch_78252d9d1e6046b5953baf4f54832904", "object": "Batch",
         "mode": "test", "state": "creating", "num_shipments": 1, "reference": null,
-        "created_at": "2022-09-26T19:20:34Z", "updated_at": "2022-09-26T19:20:34Z",
+        "created_at": "2023-05-12T19:30:43Z", "updated_at": "2023-05-12T19:30:43Z",
         "scan_form": null, "shipments": [], "status": {"created": 0, "queued_for_purchase":
         0, "creation_failed": 0, "postage_purchased": 0, "postage_purchase_failed":
         0}, "pickup": null, "label_url": null}'
@@ -37,11 +37,11 @@ interactions:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '402'
+      - '384'
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"105c753b3b2493111b69142b0946d175"
+      - W/"1bd327d381d9729dc30904f4c74daa25"
       expires:
       - '0'
       pragma:
@@ -61,7 +61,7 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 20a8e4af6331fb82e788d944003a324a
+      - 4eb6f00e645e93e3e2cc317d0005d468
       x-frame-options:
       - SAMEORIGIN
       x-node:
@@ -69,12 +69,12 @@ interactions:
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq 29913d444b
-      - extlb2nuq 29913d444b
+      - intlb1nuq a29e4ad05c
+      - extlb1nuq 5ab12a3ed2
       x-runtime:
-      - '0.041891'
+      - '0.082975'
       x-version-label:
-      - easypost-202209261717-03ecd81b73-master
+      - easypost-202305121849-b449e9bf47-master
       x-xss-protection:
       - 1; mode=block
     status:
@@ -94,25 +94,24 @@ interactions:
       user-agent:
       - <REDACTED>
     method: GET
-    uri: https://api.easypost.com/v2/batches/batch_dce1deacd2bd4b1b876ccdcf0e3d43fa
+    uri: https://api.easypost.com/v2/batches/batch_78252d9d1e6046b5953baf4f54832904
   response:
     body:
-      string: '{"id": "batch_dce1deacd2bd4b1b876ccdcf0e3d43fa", "object": "Batch",
+      string: '{"id": "batch_78252d9d1e6046b5953baf4f54832904", "object": "Batch",
         "mode": "test", "state": "creating", "num_shipments": 1, "reference": null,
-        "created_at": "2022-09-26T19:20:34Z", "updated_at": "2022-09-26T19:20:34Z",
-        "scan_form": null, "shipments": [{"batch_status": "created", "batch_message":
-        null, "reference": null, "tracking_code": null, "id": "shp_76ec156d1db34a5b9920d59fe9042fc0"}],
-        "status": {"created": 1, "queued_for_purchase": 0, "creation_failed": 0, "postage_purchased":
-        0, "postage_purchase_failed": 0}, "pickup": null, "label_url": null}'
+        "created_at": "2023-05-12T19:30:43Z", "updated_at": "2023-05-12T19:30:43Z",
+        "scan_form": null, "shipments": [], "status": {"created": 0, "queued_for_purchase":
+        0, "creation_failed": 0, "postage_purchased": 0, "postage_purchase_failed":
+        0}, "pickup": null, "label_url": null}'
     headers:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '513'
+      - '384'
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"751db88977e0670fac7756d1e1e9b7a4"
+      - W/"1bd327d381d9729dc30904f4c74daa25"
       expires:
       - '0'
       pragma:
@@ -130,20 +129,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 20a8e4af6331fb82e788d944003a325d
+      - 4eb6f00e645e93e4e2cc317d0005d472
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb5nuq
+      - bigweb2nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq 29913d444b
-      - extlb2nuq 29913d444b
+      - intlb1nuq a29e4ad05c
+      - extlb1nuq 5ab12a3ed2
       x-runtime:
-      - '0.028564'
+      - '0.022538'
       x-version-label:
-      - easypost-202209261717-03ecd81b73-master
+      - easypost-202305121849-b449e9bf47-master
       x-xss-protection:
       - 1; mode=block
     status:
